# PeTTa

./: .gitignore  README.md  build.sh  main.c  main.pl  metta.pl  mork.c  run.sh  setup.py  test.sh  zmorkspaceexec.metta
.github/ci/: Dockerfile
.github/workflows/: ci.yml  test-on-pr.yml
examples/: assert.metta  booleansolver.metta  builin_types.metta  case2.metta  caseempty.metta  casenew.metta  chain.metta  collapse.metta  comments.metta  commit.metta  concrete_types.metta  curry.metta  cut.metta  empty.metta  error.metta  eval.metta  expressionfunction.metta  factorial.metta  fib.metta  fibadd.metta  foldall.metta  foldallmatch.metta  for.metta  forall.metta  functionhead.metta  functionhead2.metta  functionhead3.metta  git_import.metta  gpt.metta  greedy_chess.metta  he_assert.metta  he_atomspace.metta  he_equalreduct.metta  he_error.metta  he_evaluation.metta  he_minimalmetta.metta  he_quoting.metta  he_types.metta  holfunctions.metta  hookcompose.metta  (+68 more)
examples/games/: GreedyChess.metta
lib/: lib_builtin_types.metta  lib_combinatorics.metta  lib_he.metta  lib_import.metta  lib_import.pl  lib_llm.metta  lib_metta4.metta  lib_mm2.metta  lib_patrick.metta  lib_prolog.metta  lib_prolog.pl  lib_roman.metta  lib_spaces.metta
metta_wrapper/: wrapper.py
mork_ffi/: Cargo.toml
mork_ffi/src/: lib.rs
python/: helper.pl  hyperonpetta.metta  hyperonpetta.py  petta.py
python/HE/: pettamorph.py
python/tests/: conftest.py  test_petta.py
src/: filereader.pl  main.pl  metta.pl  morkspaces.pl  parser.pl  spaces.pl  specializer.pl  sreader.pl  translator.pl
(+1 files in other folders)
