[package]
name = "mork_ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
#log = { path = "../../MORK/log" }
#env_logger = { path = "../../MORK/env_logger" }
pathmap = { path = "../../PathMap", features = [] }
mork-frontend = { path = "../../MORK/frontend" }
mork-bytestring = { path = "../../MORK/experiments/expr/bytestring" }
#bucket_map = { path = "../../MORK/bucket_map" }
#freeze = { path = "../../MORK/freeze" }
mork = { path = "../../MORK/kernel" }
memmap2 = "0.9.5"
#neo4rs = { version = "0.9.0-rc.5" , features = ["unstable-bolt-protocol-impl-v2"]}
#tokio = "1.43.0"
uuid = { version = "1.14.0" , features = ["v4", "fast-rng"] }
futures = "0.3.31"
async-stream = "0.3.6"
neo4rs = { version = "0.9.0-rc.6", optional = true }
tokio = { version = "1.44.0", optional = true }
rand = "0.9.1"
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.225", features = ["derive"] }
#wasmtime = { version = "37.0.1", features = ["winch"] }
itertools = "0.14.0"
base64 = "0.22.1"

[lib]
name = "mork_ffi"
crate-type = ["cdylib"]
